# agripipe

./: .gitignore  .pre-commit-config.yaml  DOCUMENTAZIONE_LOG.md  DOCUMENTAZIONE_PROGETTO.md  DOCUMENTAZIONE_PROGETTOmd  HANDOFF_FOR_CLAUDE.md  LICENSE  MISSIONE_CLAUDE.md  README.en.md  README.md  ROADMAP.md  app.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
configs/: agri_knowledge.yaml  column_synonyms.yaml  default.yaml
data/sample/: pro_demo.xlsx
docs/: configuration.md  contributing.md  getting-started.md  index.md
docs/api/: cleaner.md  loader.md  tensorizer.md
docs/superpowers/: handoff-gemini.md
docs/superpowers/plans/: 2026-04-18-agripipe-pro-upgrade.md
docs/superpowers/specs/: 2026-04-17-agripipe-pro-upgrade-design.md  2026-04-20-roadmap-and-contribution-system-design.md
notebooks/: demo.ipynb
pages/: 1_📥_Ingestion.py  2_🧹_Refinery.py  3_📦_Tensorizer.py
src/agripipe/: __init__.py  app.py  base.py  cleaner.py  cli.py  dataset.py  export.py  indices.py  loader.py  matching.py  metadata.py  pipeline.py  report.py  sustainability.py  synth.py  tensorizer.py  tracking.py  transformers.py  units.py
src/agripipe/ui/: __init__.py  components.py  theme.py
src/agripipe/utils/: logging_setup.py
tests/: conftest.py  test_cleaner.py  test_cleaner_diagnostics.py  test_cleaner_god_mode.py  test_cleaner_time_imputation.py  test_cli_args.py  test_data_architect.py  test_e2e.py  test_export.py  test_giro_italia.py  test_iq180_features.py  test_loader.py  test_loader_batch.py  test_loader_robustness.py  test_matching.py  test_metadata.py  test_piemonte_stress.py  test_presets_load.py  test_production_master.py  test_real_e2e.py  test_sustainability.py  test_synth_and_report.py  test_tensorizer.py  test_tensorizer_robustness.py  test_ui_theme.py  test_units.py
